--------------------------------------------------------------------------------

BUG FIXES and IMPROVEMENTS
* Fixed [rstudio/crosstalk#58](https://github.com/rstudio/crosstalk/issues/58), which caused Leaflet maps that used Crosstalk shared data in Shiny apps, to be redrawn at incorrect times.
* Upgrade leaflet-provider to 1.4.0, enable more map variants such as CartoDB.Voyager (#567)



leaflet 2.0.2
--------------------------------------------------------------------------------

BUG FIXES and IMPROVEMENTS
* Require viridis >= 0.5.1 to avoid namespace issues with viridisLite (#557)
* Fixed broken mouse events after using leaflet-search from leaflet.extras within shiny applications (#563)
* Use leaflet namespace on `providers` in `addMiniMap` to make the function accessible in other packages. Fixes [mtennekes/tmap#231](https://github.com/mtennekes/tmap/issues/231). (#568)
* Require scales >= 1.0.0 to avoid exact color matching issues (#578)



leaflet 2.0.1
--------------------------------------------------------------------------------

FEATURES

* Added method `addMapPane` to add custom pane layers to have fine tune control over layer ordering. New feature from within leaflet.js v1.x. (#549)
* Exposed htmlwidgets sizingPolicy in leaflet() (#548)

BUG FIXES and IMPROVEMENTS

* Default marker icon locations will now use unpkg.com instead of the leaflet cdn when using https or file protocols. (#544)
* `.leaflet-map-pane` `z-index` switched to 'auto'. Allows for map panes to appear above the map if they appear later in the dom. (#537)
* Use correct Leaflet.js scale control remove method. (#547)
* Start from world view if using flyTo or flyToBounds. (#552)


leaflet 2.0.0
--------------------------------------------------------------------------------

BREAKING CHANGES

* Update to latest leaflet.js v1.3.1 (#453, 314616f)  Please see http://leafletjs.com/reference-1.3.0.html for the latest documentation
