@@ -63,6 +63,6 @@ Suggests:
     RJSONIO,
     purrr,
     testthat
-RoxygenNote: 6.1.0
+RoxygenNote: 6.1.1
 Encoding: UTF-8
 LazyData: true
