@@ -15,7 +15,8 @@ renderLeaflet(expr, env = parent.frame(), quoted = FALSE)
 \item{width, height}{the width and height of the map (see
 \code{\link[htmlwidgets]{shinyWidgetOutput}})}
 
-\item{expr}{An expression that generates an HTML widget}
+\item{expr}{An expression that generates an HTML widget (or a
+\href{https://rstudio.github.io/promises/}{promise} of an HTML widget).}
 
 \item{env}{The environment in which to evaluate \code{expr}.}
 
